# bazel-macos-app-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
HelloWorldSwift/: BUILD  BUILD.bazel
HelloWorldSwift/Resources/: Main.storyboard
HelloWorldSwift/Sources/: AppDelegate.swift  SwiftUIView.swift
resources/: BUILD
